--- a/cards/hquinn.html
+++ b/cards/hquinn.html
@@ -32,7 +32,7 @@
                 <img class="guns" src="../img/XMLID 386.png" alt="">
                 <img class="bazooka" src="../img/Vector (1).png" alt="">
             </div>
-            <div class="linkHome"><a href="../Index.html">Volver al Home</a></div>
+            <div class="linkHome"><a href="../index.html">Volver al Home</a></div>
         </div>
     </main>
     <footer class="textFooter">
