--- a/contacto.html
+++ b/contacto.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css" >
 </head>
     <body>
-        <aside class="descBox"><span>20% de descuento en todos los productos</span></aside>
         <header>
+            <aside class="descBox">20% de descuento en todos los productos</aside>
             <div  class="Ecommerce"><img src="./img/OBJECTS.png" alt=""><h1>Nombre Tienda</h1></div>
         </header>
         <main>
