--- a/cards/hquinn.html
+++ b/cards/hquinn.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../css/style.css" >
 </head>
 <body>
-    <aside class="descBox"><span>Estamos echos unos locos</span></aside>
     <header>
+        <aside class="descBox">20% de descuento en todos los productos</aside>
         <div  class="Ecommerce"><h1>Harley Queen</h1></div>
     </header>
     <main>
